--- a/config.toml
+++ b/config.toml
@@ -18,7 +18,7 @@ defaultContentLanguage = "en-us"
 title = "Columbia DSI Scholars"
 theme = "hugo-tranquilpeak-theme"
 publishDir = "../DSI-scholars/"
-disqusShortname = "hugo-tranquilpeak-theme"
+disqusShortname = "dsischolars"
 # googleAnalytics = "UA-123-45"
 paginate = 7
 canonifyurls = true
@@ -93,12 +93,12 @@ relativeurls = true
   pre = "<i class=\"sidebar-button-icon fa fa-lg fa-twitter\"></i>"
   url = "https://twitter.com/DSI_Columbia"
 
-[[menu.links]]
-  weight = 2
-  identifier = "university"
-  name = "Data Science Institute"
-  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-university\"></i>"
-  url = "http://datascience.columbia.edu"
+#[[menu.links]]
+#  weight = 2
+#  identifier = "university"
+#  name = "Data Science Institute"
+#  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-university\"></i>"
+#  url = "http://datascience.columbia.edu"
 
 #[[menu.misc]]
 #  weight = 1
@@ -174,9 +174,9 @@ relativeurls = true
   # The link at the right of the header is customizable
   # You can add a link (as an icon) at the right of the header instead of the author's gravatar image or author's picture.
   # By default, author's gravatar or author's picture is displayed.
-       url: /#search
-       icon: search
-       class: st-search-show-outputs
+  #     url: /#search
+  #     icon: search
+  #     class: st-search-show-outputs
 
   # Custom CSS. Put here your custom CSS files. They are loaded after the theme CSS;
   # they have to be referred from static root. Example
