--- a/config.toml
+++ b/config.toml
@@ -18,7 +18,7 @@ defaultContentLanguage = "en-us"
 title = "Columbia DSI Scholars"
 theme = "hugo-tranquilpeak-theme"
 publishDir = "../DSI-scholars/"
-disqusShortname = "dsischolars"
+# disqusShortname = "dsischolars"
 # googleAnalytics = "UA-123-45"
 paginate = 7
 canonifyurls = true
@@ -33,8 +33,8 @@ relativeurls = true
   archive = "archives"
 
 [author]
-  name = "Columbia Data Science Institute Scholars, Summer 2018"
-  bio = "DSI Scholars Program is to engage undergraduate and master students to work with Columbia faculty through a data science research internship. The program’s unique enrichment activities will foster a learning and collaborative community in data science at Columbia."
+  name = "Columbia Data Science Institute (DSI) Scholars Program"
+  bio = "The DSI Scholars Program is to engage undergraduate and master students in data science related research with Columbia faculty. The program’s unique enrichment activities will foster a learning and collaborative community in data science at Columbia."
   job = "Columbia University DSI"
   location = "New York, NY"
   # Your Gravatar email. Overwrite `author.picture` everywhere in the blog
@@ -43,7 +43,7 @@ relativeurls = true
   # Overwritten by your gravatar image if `author.gravatarEmail` is filled
   picture = "https://industry.datascience.columbia.edu/sites/default/files/profiles/photos/Data-Science-Avatar.png"
   # Your Twitter username without the @. E.g : thibaudlepretre
-   twitter = "DSI_Columbia"
+   twitter = "dsi_columbia"
   # Your google plus profile id. E.g : +ThibaudLepretre or 114625208755123718311
   # googlePlus = "+ThibaudLepretre"
 
@@ -93,12 +93,12 @@ relativeurls = true
   pre = "<i class=\"sidebar-button-icon fa fa-lg fa-twitter\"></i>"
   url = "https://twitter.com/DSI_Columbia"
 
-#[[menu.links]]
-#  weight = 2
-#  identifier = "university"
-#  name = "Data Science Institute"
-#  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-university\"></i>"
-#  url = "http://datascience.columbia.edu"
+[[menu.links]]
+  weight = 2
+  identifier = "university"
+  name = "Contact Info"
+  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-paper-plane\"></i>"
+  url = "/page/contact-info"
 
 #[[menu.misc]]
 #  weight = 1
