updated links to application form

--- a/config.toml
+++ b/config.toml
@@ -112,7 +112,7 @@ relativeurls = true
   identifier = "gform"
   name = "Apply Now"
   pre = "<i class=\"sidebar-button-icon fa fa-lg fa-mortar-board\"></i>"
-  url = "https://goo.gl/forms/RlCEowm2dK8doSNq1"
+  url = "https://docs.google.com/forms/d/e/1FAIpQLSfM0dLUXtOm0evH_DImev1i5FXwH-Q1vLF3C_nhISWhJSp6yA/viewform"
 
 
 
