--- a/config.toml
+++ b/config.toml
@@ -84,7 +84,7 @@ relativeurls = true
   identifier = "faq"
   name = "FAQ"
   pre = "<i class=\"sidebar-button-icon fa fa-lg fa-question-circle\"></i>"
-  url = "/page/faq2020"
+  url = "/page/faq2020-summer"
 
 [[menu.links]]
   weight = 4
