Refer to new application form

--- a/config.toml
+++ b/config.toml
@@ -112,7 +112,7 @@ relativeurls = true
   identifier = "gform"
   name = "Apply Now"
   pre = "<i class=\"sidebar-button-icon fa fa-lg fa-mortar-board\"></i>"
-  url = "https://forms.gle/FirneensvXgZGE6HA"
+  url = "https://docs.google.com/forms/d/e/1FAIpQLSe3Rxxf9PVZ5IbuRoyy5slMz7kcC9-4ILWPPnyyWNV6nacppg/viewform?usp=sf_link"
 
 
 #[[menu.misc]]
