--- a/config.toml
+++ b/config.toml
@@ -86,7 +86,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\
   identifier = "faq"
   name = "FAQ"
   pre = "<i class=\"sidebar-button-icon fa fa-lg fa-question-circle\"></i>"
-  url = "/page/student_faq"
+  url = "/static/student_faq"
 
 [[menu.links]]
   weight = 4
