--- a/config.toml
+++ b/config.toml
@@ -114,7 +114,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\
   identifier = "gform"
   name = "Apply Now"
   pre = "<i class=\"sidebar-button-icon fa fa-lg fa-mortar-board\"></i>"
-  url = "https://docs.google.com/forms/d/e/1FAIpQLSeQNPZYgxVAcJyaoWUPmJA1WtMYrFEh8bBiG_LNeGSwWYHmhw/viewform?usp=sf_link"
+  url = "https://docs.google.com/forms/d/15k4RmA8L7dwp2S_NxJ2CzUzDD1JnuOAkLBnkFSCZ3_Y/edit"
 
 
 #[[menu.misc]]
